inject layer without logg config

--- a/inject-layer/src/main/resources/config/config.properties
+++ b/inject-layer/src/main/resources/config/config.properties
@@ -5,16 +5,12 @@ simul.tick.closing=1
 simul.time.startdate=09/13/2015
 simul.time.openhour=9:00
 simul.time.closehour=17:30
-simul.output.file=false
-simul.output.kafka=false
+simul.output.kafka=true
 simul.agent.cash=1
 simul.agent.minprice=1
 simul.agent.maxprice=20
 simul.agent.minquantity=10
 simul.agent.maxquantity=50
-simul.worker=10
-simul.flushRatio=1000
-simul.bufferSize=1000
 atom.orderbooks=DOW30
 atom.orderbooks.random=10
 atom.agents=random
