--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,12 @@
                 <version>${log4j.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-core</artifactId>
+                <version>${log4j.version}</version>
+            </dependency>
+
             <!-- TESTS-->
             <dependency>
                 <groupId>junit</groupId>
