--- a/inject-layer/src/main/resources/config.properties
+++ b/inject-layer/src/main/resources/config.properties
@@ -11,11 +11,15 @@ simul.agent.minprice=1
 simul.agent.maxprice=20
 simul.agent.minquantity=10
 simul.agent.maxquantity=50
+symbols.orderbooks.DOW30=MMM,AXP,AAPL,BA,CAT,CVX,CSCO,KO,DIS,DD,XOM,GE,GS,HD,IBM,INTC,JNJ,JPM,MCD,MRK,MSFT,NKE,PFE,PG,TRV,UTX,UNH,VZ,V,WMT
+symbols.orderbooks.test=TEST1,TEST2,TEST3
+symbols.orderbooks.test2=AAPL,GOOG
+symbols.agents.basic=Paul,Anna,Nicolas,Gabriel,Pauline,Beatrice,Frank,Laurie,Adele,Alain
 atom.orderbooks=DOW30
 atom.orderbooks.random=10
 atom.agents=random
 atom.agents.random=100
 atom.marketmaker=false
 atom.marketmaker.quantity=10
-kafka.topic=atomTopic
+kafka.topic=atom
 bootstrap.kafka.servers=localhost:9092
