Update logstash configuration

--- a/index-layer/logstash/config/Atom.config
+++ b/index-layer/logstash/config/Atom.config
@@ -1,6 +1,6 @@
 input {
   kafka {
-      topic_id => "atomTopic"
+      topic_id => "atom"
       type => "atom"
       codec => "plain"
   }
@@ -20,7 +20,17 @@ filter {
   } elseif [message] =~ /^Order/ {
       csv {
           separator => ";"
-          columns => ["Trace", "ObName", "Sender", "ExtId", "Type", "Id", "Quantity", "Direction", "Price", "Validity", "Ts"]
+          columns => ["Trace", "ObName", "Sender", "ExtId", "Type", "Id", "Quantity", "Price", "Validity", "Ts"]
+      }
+
+      date {
+          match => ["Ts", "YYYY-MM-dd;HH:mm:ss.SSS", "UNIX_MS"]
+          target => "@timestamp"
+      }
+  } elseif [message] =~ /^Exec/ {
+      csv {
+          separator => ";"
+          columns => ["Trace", "Sender", "Ts"]
       }
 
       date {
