Add kafka broker in config.properties

--- a/stream-layer/src/main/resources/config.properties
+++ b/stream-layer/src/main/resources/config.properties
@@ -4,3 +4,4 @@ hbase.conf.hbase=/tmp/configuration.xml
 hadoop.conf.hdfs=/tmp/configuration.xml
 kafka.topic=atomTopic
 kafka.quorum=localhost:2181
+kafka.broker=localhost:9092
