--- a/pom.xml
+++ b/pom.xml
@@ -54,8 +54,9 @@
         <log4j.version>2.6.2</log4j.version> <!-- http://logging.apache.org/log4j/2.x/maven-artifacts.html -->
         <junit.version>4.12</junit.version> <!-- https://mvnrepository.com/artifact/junit/junit -->
         <kafka.version>0.10.0.0</kafka.version> <!-- https://mvnrepository.com/artifact/org.apache.kafka -->
-        <spark.version>1.5.2</spark.version> <!-- https://mvnrepository.com/artifact/org.apache.spark -->
-        <hbase.version>1.1.2</hbase.version> <!-- https://mvnrepository.com/artifact/org.apache.hbase -->
+        <spark.version>2.0.0</spark.version> <!-- https://mvnrepository.com/artifact/org.apache.spark -->
+        <spark.streaming.kafka.version>1.6.2</spark.streaming.kafka.version> <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-streaming-kafka_2.11 -->
+        <hbase.version>1.2.2</hbase.version> <!-- https://mvnrepository.com/artifact/org.apache.hbase -->
         <flink.version>1.1.0</flink.version> <!-- https://mvnrepository.com/artifact/org.apache.flink -->
         <curator.test.version>3.2.0</curator.test.version>
 
