--- a/stream-layer/pom.xml
+++ b/stream-layer/pom.xml
@@ -97,7 +97,7 @@
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-streaming-kafka_2.11</artifactId>
-            <version>${spark.version}</version>
+            <version>${spark.streaming.kafka.version}</version>
         </dependency>
 
         <!-- HBASE -->
@@ -140,6 +140,11 @@
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-connector-kafka-0.9_2.11</artifactId>
             <version>1.0.3</version>
+        </dependency>
+        <dependency> <!-- Used for @NotNull annotations -->
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations-java5</artifactId>
+            <version>15.0</version>
         </dependency>
 
     </dependencies>
