Add comments for a better understanding of the Atom simulation properties

--- a/inject-layer/src/main/resources/config.properties
+++ b/inject-layer/src/main/resources/config.properties
@@ -1,25 +1,68 @@
+# ==================================================
+# ================= ATOM properties ================
+# ==================================================
+
+## ======== Time related properties ========
+# Number of days in the simulation
 simul.days=2
+# Number of Ticks before the beginning of the day
 simul.tick.opening=1
+# Number of Ticks during the day
 simul.tick.continuous=100
+# Number of Ticks after the end of the day during the closing
 simul.tick.closing=1
+# The start date of the simulation
 simul.time.startdate=09/13/2015
+# The market's opening hour
 simul.time.openhour=9:00
+# The market's closing hour
 simul.time.closehour=17:30
-simul.output.kafka=true
-simul.agent.cash=1
-simul.agent.minprice=1
-simul.agent.maxprice=20
-simul.agent.minquantity=10
-simul.agent.maxquantity=50
-symbols.orderbooks.DOW30=MMM,AXP,AAPL,BA,CAT,CVX,CSCO,KO,DIS,DD,XOM,GE,GS,HD,IBM,INTC,JNJ,JPM,MCD,MRK,MSFT,NKE,PFE,PG,TRV,UTX,UNH,VZ,V,WMT
-symbols.orderbooks.test=TEST1,TEST2,TEST3
-symbols.orderbooks.test2=AAPL,GOOG
-symbols.agents.basic=Paul,Anna,Nicolas,Gabriel,Pauline,Beatrice,Frank,Laurie,Adele,Alain
-atom.orderbooks=DOW30
-atom.orderbooks.random=10
+
+## ======== Agents properties ========
+# Used to choose between anonymous agents or agents with names for the simulation. List of named agents is defined in the "symbols-agents-basic" property
 atom.agents=random
+# Number of anonymous agents to create if value of *atom.agents* property is defined to "random"
 atom.agents.random=100
+# The list of agent names to use if the property "atom-agents" is set to "basic"
+symbols.agents.basic=Paul,Anna,Nicolas,Gabriel,Pauline,Beatrice,Frank,Laurie,Adele,Alain
+# Starting cash for agents
+simul.agent.cash=1
+# Used to build buy/sell prices when agents send orders
+simul.agent.minprice=1
+# Used to build buy/sell prices when agents send orders
+simul.agent.maxprice=20
+    # Used to generate quantities when agent send orders
+simul.agent.minquantity=10
+# Used to generate quantities when agent send orders
+simul.agent.maxquantity=50
+
+## ======== OrderBook (symbols) properties ========
+# Property used to choose a certain OrderBook or use random ones (here we use DOW30 with symbols defined in symbols-orderbooks-DOW30 property)
+atom.orderbooks=DOW30
+# The number of random OrderBooks to create if we choose to use random order books in the simulation
+atom.orderbooks.random=10
+# The list of symbols for the DOW30 (an OrderBook corresponds to one symbol) if "atom-agents" property is set to "DOW30"
+symbols.orderbooks.DOW30=MMM,AXP,AAPL,BA,CAT,CVX,CSCO,KO,DIS,DD,XOM,GE,GS,HD,IBM,INTC,JNJ,JPM,MCD,MRK,MSFT,NKE,PFE,PG,TRV,UTX,UNH,VZ,V,WMT
+
+
+## ======== Market makers properties ========
+# Property that manages the absence/presence of MarketMakers in the simulation
 atom.marketmaker=false
+# Number of MarketMakers if "atom-marketmaker" property is set to true
 atom.marketmaker.quantity=10
+
+
+
+
+# ==================================================
+# ================= KAFKA properties ===============
+# ==================================================
+
+# Boolean value to whether or not enable Kafka output for the simulation
+simul.output.kafka=true
+# The name of the Kafka topic where Atom will publish the simulations data and from which any stream processing framework will read
 kafka.topic=atomTopic
+# A list of host/port pairs to use for establishing the initial connection to the Kafka cluster
 bootstrap.kafka.servers=localhost:9092
+# ZooKeeper quorum for Kafka
+kafka.quorum=localhost:2181
