Test with Kafka connect and ElasticSearch - Not implemented

--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
     <modules>
         <module>inject-layer</module>
         <module>stream-layer</module>
+        <module>serving-layer</module>
     </modules>
 
 
