Change Kafka topic name from "atomTopic" to "atom-raw-data"

--- a/serving-layer/src/main/resources/elasticsearch-sink.properties
+++ b/serving-layer/src/main/resources/elasticsearch-sink.properties
@@ -9,7 +9,7 @@ connector.class=com.finaxys.connect.elasticsearch.ElasticsearchSinkConnector
 tasks.max=10
 
 # A list of topics to use as input for this connector
-topics=atomTopic
+topics=atom-raw-data
 
 
 
