--- a/inject-layer/src/main/resources/config.properties
+++ b/inject-layer/src/main/resources/config.properties
@@ -61,7 +61,7 @@ atom.marketmaker.quantity=10
 # Boolean value to whether or not enable Kafka output for the simulation
 simul.output.kafka=true
 # The name of the Kafka topic where Atom will publish the simulations data and from which any stream processing framework will read
-kafka.topic=atomTopic
+kafka.topic=atom-raw-data
 # A list of host/port pairs to use for establishing the initial connection to the Kafka cluster
 bootstrap.kafka.servers=localhost:9092
 # ZooKeeper quorum for Kafka
