--- a/inject-layer/src/test/resources/config/config.properties
+++ b/inject-layer/src/test/resources/config/config.properties
@@ -21,5 +21,5 @@ atom.agents=random
 atom.agents.random=100
 atom.marketmaker=false
 atom.marketmaker.quantity=10
-kafka.topic=atomTopic
+kafka.topic=atom-raw-data
 bootstrap.kafka.servers=localhost:9092
