Update logstash config files to read from kafka topic and write to different Elastic indexes

--- a/index-layer/logstash/config/keep-agent-order-exec.config
+++ b/index-layer/logstash/config/keep-agent-order-exec.config
@@ -1,6 +1,6 @@
 input {
   kafka {
-      topic_id => "atomTopic"
+      topic_id => "atom-raw-data"
       type => "atom"
       codec => "plain"
   }
@@ -48,6 +48,8 @@ output {
       codec => rubydebug 
   }
 
-  elasticsearch { 
+  elasticsearch {
+      hosts => ["localhost:9200"]
+      index => "keep-agent-order-exec"
   }
 }
