--- a/index-layer/logstash/config/raw-data.config
+++ b/index-layer/logstash/config/raw-data.config
@@ -1,6 +1,6 @@
 input {
   kafka {
-      topic_id => "atomTopic"
+      topic_id => "atom-raw-data"
       type => "atom"
       codec => "plain"
   }
@@ -15,6 +15,8 @@ output {
       codec => rubydebug 
   }
 
-  elasticsearch { 
+  elasticsearch {
+      hosts => ["localhost:9200"]
+      index => "atom-raw-data"
   }
 }
