Update dependencies versions and use of properties variables in project sub-modules pom files

--- a/serving-layer/pom.xml
+++ b/serving-layer/pom.xml
@@ -35,7 +35,7 @@
         <!-- KAFKA -->
         <dependency>
             <groupId>org.apache.kafka</groupId>
-            <artifactId>kafka_2.11</artifactId>
+            <artifactId>kafka_${scala.version}</artifactId>
         </dependency>
 
         <dependency>
