--- a/pom.xml
+++ b/pom.xml
@@ -54,12 +54,13 @@
         <!-- Libraries versions -->
         <log4j.version>2.6.2</log4j.version> <!-- http://logging.apache.org/log4j/2.x/maven-artifacts.html -->
         <junit.version>4.12</junit.version> <!-- https://mvnrepository.com/artifact/junit/junit -->
-        <kafka.version>0.10.0.1</kafka.version> <!-- https://mvnrepository.com/artifact/org.apache.kafka -->
-        <spark.version>2.0.0</spark.version> <!-- https://mvnrepository.com/artifact/org.apache.spark -->
-        <spark.streaming.kafka.version>1.6.2</spark.streaming.kafka.version> <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-streaming-kafka_2.11 -->
-        <hbase.version>1.2.2</hbase.version> <!-- https://mvnrepository.com/artifact/org.apache.hbase -->
-        <flink.version>1.1.1</flink.version> <!-- https://mvnrepository.com/artifact/org.apache.flink -->
+        <kafka.version>0.10.1.0</kafka.version> <!-- https://mvnrepository.com/artifact/org.apache.kafka -->
+        <spark.version>2.0.2</spark.version> <!-- https://mvnrepository.com/artifact/org.apache.spark -->
+        <spark.streaming.kafka.version>1.6.3</spark.streaming.kafka.version> <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-streaming-kafka_2.11 -->
+        <hbase.version>1.2.3</hbase.version> <!-- https://mvnrepository.com/artifact/org.apache.hbase -->
+        <flink.version>1.1.3</flink.version> <!-- https://mvnrepository.com/artifact/org.apache.flink -->
         <curator.test.version>3.2.0</curator.test.version>
+        <scala.version>2.11</scala.version>
 
         <!-- maven plugin versions -->
         <maven-compiler-plugin.version>3.5.1</maven-compiler-plugin.version>
@@ -94,7 +95,7 @@
             <!-- ===== KAFKA ===== -->
             <dependency>
                 <groupId>org.apache.kafka</groupId>
-                <artifactId>kafka_2.11</artifactId>
+                <artifactId>kafka_${scala.version}</artifactId>
                 <version>${kafka.version}</version>
             </dependency>
 
