Rename ATOM config File and add some configurations

--- a/inject-layer/src/main/resources/atom-config.properties
+++ b/inject-layer/src/main/resources/atom-config.properties
@@ -8,15 +8,22 @@ simul.days=2
 # Number of Ticks before the beginning of the day
 simul.tick.opening=1
 # Number of Ticks during the day
-simul.tick.continuous=100
+simul.tick.continuous=1000
 # Number of Ticks after the end of the day during the closing
 simul.tick.closing=1
-# The start date of the simulation
-simul.time.startdate=09/13/2015
+# The timezone for the simulation
+simul.time.timezone=Europe/Paris
+# The start date of the simulation yyyy-MM-dd
+simul.time.startdate=2016-01-01
 # The market's opening hour
-simul.time.openhour=9:00
+simul.time.openhour=09:00:00
 # The market's closing hour
-simul.time.closehour=17:30
+simul.time.closehour=17:30:00
+# The time representation in logs (timestamp means the time in milliseconds, human readable means datetime)
+simul.time.date.format=yyyy-MM-dd
+simul.time.time.format=HH:mm:ss
+simul.time.timestamp.enabled=true
+simul.time.timestamp.human.readable=true
 
 ## ======== Agents properties ========
 # Used to choose between anonymous agents or agents with names for the simulation. List of named agents is defined in the "symbols-agents-basic" property
@@ -38,9 +45,9 @@ simul.agent.maxquantity=50
 
 ## ======== OrderBook (symbols) properties ========
 # Property used to choose a certain OrderBook or use random ones (here we use DOW30 with symbols defined in symbols-orderbooks-DOW30 property)
-atom.orderbooks=DOW30
+atom.orderbooks=random
 # The number of random OrderBooks to create if we choose to use random order books in the simulation
-atom.orderbooks.random=10
+atom.orderbooks.random=3
 # The list of symbols for the DOW30 (an OrderBook corresponds to one symbol) if "atom-agents" property is set to "DOW30"
 symbols.orderbooks.DOW30=MMM,AXP,AAPL,BA,CAT,CVX,CSCO,KO,DIS,DD,XOM,GE,GS,HD,IBM,INTC,JNJ,JPM,MCD,MRK,MSFT,NKE,PFE,PG,TRV,UTX,UNH,VZ,V,WMT
 
@@ -53,16 +60,13 @@ atom.marketmaker.quantity=10
 
 
 
-
 # ==================================================
-# ================= KAFKA properties ===============
+# ================= OUTPUT properties ===============
 # ==================================================
 
 # Boolean value to whether or not enable Kafka output for the simulation
-simul.output.kafka=true
-# The name of the Kafka topic where Atom will publish the simulations data and from which any stream processing framework will read
-kafka.topic=atom-raw-data
-# A list of host/port pairs to use for establishing the initial connection to the Kafka cluster
-bootstrap.kafka.servers=localhost:9092
-# ZooKeeper quorum for Kafka
-kafka.quorum=localhost:2181
+simul.output.kafka=false
+# Boolean value to whether or not enable File output for the simulation
+# and the file to write the simulation logs to
+simul.output.file=true
+simul.output.file.path=/Users/raphael/Desktop/atom-simul.out
