--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,14 @@
             <organization>Finaxys</organization>
             <organizationUrl>http://www.finaxys.com/</organizationUrl>
         </developer>
+
+        <developer>
+            <id>raphaelhamonnais</id>
+            <name>Raphael Hamonnais</name>
+            <email>rhamonnais@finaxys.com</email>
+            <organization>Finaxys</organization>
+            <organizationUrl>http://www.finaxys.com/</organizationUrl>
+        </developer>
     </developers>
 
 
@@ -40,6 +48,7 @@
         <module>inject-layer</module>
         <module>stream-layer</module>
         <module>serving-layer</module>
+        <module>utility-layer</module>
     </modules>
 
 
@@ -65,6 +74,8 @@
         <!-- maven plugin versions -->
         <maven-compiler-plugin.version>3.5.1</maven-compiler-plugin.version>
 
+        <commons.cli.version>1.3.1</commons.cli.version>
+        <joda.time.version>2.9.6</joda.time.version>
     </properties>
 
     <dependencyManagement>
@@ -104,7 +115,19 @@
                 <artifactId>kafka-clients</artifactId>
                 <version>${kafka.version}</version>
             </dependency>
+
+
+
+            <!-- https://mvnrepository.com/artifact/joda-time/joda-time -->
+            <dependency>
+                <groupId>joda-time</groupId>
+                <artifactId>joda-time</artifactId>
+                <version>${joda.time.version}</version>
+            </dependency>
+
         </dependencies>
+
+
 
     </dependencyManagement>
 </project>
