Add properties to handle out of order parameters

--- a/inject-layer/src/main/resources/atom-config.properties
+++ b/inject-layer/src/main/resources/atom-config.properties
@@ -19,11 +19,23 @@ simul.time.startdate=2016-01-01
 simul.time.openhour=09:00:00
 # The market's closing hour
 simul.time.closehour=17:30:00
-# The time representation in logs (timestamp means the time in milliseconds, human readable means datetime)
+# Date format to transform long timestamps in date
 simul.time.date.format=yyyy-MM-dd
+# Time format to transform long timestamps in time
 simul.time.time.format=HH:mm:ss
+# Whether or not add a timestamp with a number format to the simulation logs
 simul.time.timestamp.enabled=true
+# Whether or not add a timestamp with a date time format to the simulation logs
 simul.time.timestamp.human.readable=true
+# Whether or not the simulation will produce out of order messages
+simul.time.outOfOrder.enabled=true
+# Coefficient by which multiply the time per tick when the logger chose to send out of order logs or not
+#   Example : if equal one, no out of order, if equal 3, logs from the two previous ticks can appear in the current tick
+simul.time.outOfOrder.coefficient=3
+# Maximum delay that the multiplication of the time per tick and the out of order coefficient can't exceed (in seconds)
+simul.time.outOfOrder.maxDelayInSeconds=180
+# Percentage of logs out of order
+simul.time.outOfOrder.percentage=20
 
 ## ======== Agents properties ========
 # Used to choose between anonymous agents or agents with names for the simulation. List of named agents is defined in the "symbols-agents-basic" property
