--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,8 @@
         <spark.version>2.0.2</spark.version> <!-- https://mvnrepository.com/artifact/org.apache.spark -->
         <spark.streaming.kafka.version>1.6.3</spark.streaming.kafka.version> <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-streaming-kafka_2.11 -->
         <hbase.version>1.2.3</hbase.version> <!-- https://mvnrepository.com/artifact/org.apache.hbase -->
-        <flink.version>1.1.3</flink.version> <!-- https://mvnrepository.com/artifact/org.apache.flink -->
+        <flink.stable.version>1.1.4</flink.stable.version> <!-- https://mvnrepository.com/artifact/org.apache.flink -->
+        <flink.snapshot.version>1.2-SNAPSHOT</flink.snapshot.version> <!-- https://mvnrepository.com/artifact/org.apache.flink -->
         <curator.test.version>3.2.0</curator.test.version>
         <scala.version>2.11</scala.version>
 
@@ -77,6 +78,21 @@
         <commons.cli.version>1.3.1</commons.cli.version>
         <joda.time.version>2.9.6</joda.time.version>
     </properties>
+
+
+    <repositories>
+        <repository>
+            <id>apache.snapshots</id>
+            <name>Apache Development Snapshot Repository</name>
+            <url>https://repository.apache.org/content/repositories/snapshots/</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 
     <dependencyManagement>
 
