--- a/stream-layer/pom.xml
+++ b/stream-layer/pom.xml
@@ -46,6 +46,12 @@
 
     <dependencies>
 
+        <dependency>
+            <groupId>com.finaxys</groupId>
+            <artifactId>utility-layer</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
         <!-- LOGGING -->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
@@ -115,33 +121,51 @@
 
 
         <!-- FLINK -->
+        <!-- Flink stable version -->
+        <!--
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-java</artifactId>
             <version>${flink.version}</version>
         </dependency>
-
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-streaming-java_${scala.version}</artifactId>
-            <version>${flink.version}</version>
+            <version>${flink.stable.version}</version>
         </dependency>
-
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-clients_${scala.version}</artifactId>
-            <version>${flink.version}</version>
+            <version>${flink.stable.version}</version>
         </dependency>
-
-
         <dependency>
-            <!-- https://mvnrepository.com/artifact/org.apache.flink/flink-connector-kafka-0.9_2.10 -->
-            <!--***** Needs Kafka 0.9.x or higher to work ******-->
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-connector-kafka-0.9_${scala.version}</artifactId>
-            <version>${flink.version}</version>
+            <version>${flink.stable.version}</version>
         </dependency>
+        -->
 
+        <!-- Flink latest version -->
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-java</artifactId>
+            <version>${flink.snapshot.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-streaming-java_${scala.version}</artifactId>
+            <version>${flink.snapshot.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-clients_${scala.version}</artifactId>
+            <version>${flink.snapshot.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-connector-kafka-0.10_${scala.version}</artifactId>
+            <version>${flink.snapshot.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
