--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,8 @@
         <!-- General properties -->
         <java.version>1.7</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
 
 
         <!-- Libraries versions -->
