Add AtomReplay class in order to replay previous ATOM simulations

--- a/inject-layer/src/main/resources/atom-config.properties
+++ b/inject-layer/src/main/resources/atom-config.properties
@@ -4,13 +4,13 @@
 
 ## ======== Time related properties ========
 # Number of days in the simulation
-simul.days=2
+simul.days=10
 # Number of Ticks before the beginning of the day
-simul.tick.opening=1
+simul.tick.opening=0
 # Number of Ticks during the day
-simul.tick.continuous=1000
+simul.tick.continuous=20
 # Number of Ticks after the end of the day during the closing
-simul.tick.closing=1
+simul.tick.closing=0
 # The timezone for the simulation
 simul.time.timezone=Europe/Paris
 # The start date of the simulation yyyy-MM-dd
@@ -28,29 +28,29 @@ simul.time.timestamp.enabled=true
 # Whether or not add a timestamp with a date time format to the simulation logs
 simul.time.timestamp.human.readable=true
 # Whether or not the simulation will produce out of order messages
-simul.time.outOfOrder.enabled=true
+simul.time.outOfOrder.enabled=false
 # Coefficient by which multiply the time per tick when the logger chose to send out of order logs or not
 #   Example : if equal one, no out of order, if equal 3, logs from the two previous ticks can appear in the current tick
 simul.time.outOfOrder.coefficient=3
 # Maximum delay that the multiplication of the time per tick and the out of order coefficient can't exceed (in seconds)
-simul.time.outOfOrder.maxDelayInSeconds=600
+simul.time.outOfOrder.maxDelayInSeconds=3600
 # Percentage of logs out of order
-simul.time.outOfOrder.percentage=20
+simul.time.outOfOrder.percentage=30
 
 ## ======== Agents properties ========
 # Used to choose between anonymous agents or agents with names for the simulation. List of named agents is defined in the "symbols-agents-basic" property
 atom.agents=random
 # Number of anonymous agents to create if value of *atom.agents* property is defined to "random"
-atom.agents.random=100
+atom.agents.random=2
 # The list of agent names to use if the property "atom-agents" is set to "basic"
 symbols.agents.basic=Paul,Anna,Nicolas,Gabriel,Pauline,Beatrice,Frank,Laurie,Adele,Alain
 # Starting cash for agents
-simul.agent.cash=1
+simul.agent.cash=0
 # Used to build buy/sell prices when agents send orders
 simul.agent.minprice=1
 # Used to build buy/sell prices when agents send orders
 simul.agent.maxprice=20
-    # Used to generate quantities when agent send orders
+# Used to generate quantities when agent send orders
 simul.agent.minquantity=10
 # Used to generate quantities when agent send orders
 simul.agent.maxquantity=50
@@ -59,7 +59,7 @@ simul.agent.maxquantity=50
 # Property used to choose a certain OrderBook or use random ones (here we use DOW30 with symbols defined in symbols-orderbooks-DOW30 property)
 atom.orderbooks=random
 # The number of random OrderBooks to create if we choose to use random order books in the simulation
-atom.orderbooks.random=3
+atom.orderbooks.random=1
 # The list of symbols for the DOW30 (an OrderBook corresponds to one symbol) if "atom-agents" property is set to "DOW30"
 symbols.orderbooks.DOW30=MMM,AXP,AAPL,BA,CAT,CVX,CSCO,KO,DIS,DD,XOM,GE,GS,HD,IBM,INTC,JNJ,JPM,MCD,MRK,MSFT,NKE,PFE,PG,TRV,UTX,UNH,VZ,V,WMT
 
@@ -81,4 +81,4 @@ simul.output.kafka=false
 # Boolean value to whether or not enable File output for the simulation
 # and the file to write the simulation logs to
 simul.output.file=true
-simul.output.file.path=/Users/raphael/Desktop/atom-simul.out
+simul.output.file.path=/Users/raphael/Desktop/atom/atom-simul.out
