Small changes in config files, not important

--- a/inject-layer/src/main/resources/atom-config.properties
+++ b/inject-layer/src/main/resources/atom-config.properties
@@ -4,17 +4,19 @@
 
 ## ======== Time related properties ========
 # Number of days in the simulation
-simul.days=10
-# Number of Ticks before the beginning of the day
+simul.days=7
+# Number of Ticks before the beginning of the day (keep to 0 in order to work with the AtomReplay class)
 simul.tick.opening=0
 # Number of Ticks during the day
-simul.tick.continuous=20
-# Number of Ticks after the end of the day during the closing
+simul.tick.continuous=10000
+# Number of Ticks after the end of the day during the closing (keep to 0 in order to work with the AtomReplay class)
 simul.tick.closing=0
 # The timezone for the simulation
 simul.time.timezone=Europe/Paris
+# If true, the start date will be the current date minus 6 days, otherwise the value from "simul.time.startdate" propertie is applied
+simul.time.startdate.last.seven.days=true
 # The start date of the simulation yyyy-MM-dd
-simul.time.startdate=2016-01-01
+simul.time.startdate=2017-02-03
 # The market's opening hour
 simul.time.openhour=09:00:00
 # The market's closing hour
@@ -35,13 +37,13 @@ simul.time.outOfOrder.coefficient=3
 # Maximum delay that the multiplication of the time per tick and the out of order coefficient can't exceed (in seconds)
 simul.time.outOfOrder.maxDelayInSeconds=3600
 # Percentage of logs out of order
-simul.time.outOfOrder.percentage=30
+simul.time.outOfOrder.percentage=60
 
 ## ======== Agents properties ========
 # Used to choose between anonymous agents or agents with names for the simulation. List of named agents is defined in the "symbols-agents-basic" property
 atom.agents=random
 # Number of anonymous agents to create if value of *atom.agents* property is defined to "random"
-atom.agents.random=2
+atom.agents.random=4
 # The list of agent names to use if the property "atom-agents" is set to "basic"
 symbols.agents.basic=Paul,Anna,Nicolas,Gabriel,Pauline,Beatrice,Frank,Laurie,Adele,Alain
 # Starting cash for agents
@@ -49,7 +51,7 @@ simul.agent.cash=0
 # Used to build buy/sell prices when agents send orders
 simul.agent.minprice=1
 # Used to build buy/sell prices when agents send orders
-simul.agent.maxprice=20
+simul.agent.maxprice=200
 # Used to generate quantities when agent send orders
 simul.agent.minquantity=10
 # Used to generate quantities when agent send orders
@@ -70,8 +72,6 @@ atom.marketmaker=false
 # Number of MarketMakers if "atom-marketmaker" property is set to true
 atom.marketmaker.quantity=10
 
-
-
 # ==================================================
 # ================= OUTPUT properties ===============
 # ==================================================
@@ -81,4 +81,5 @@ simul.output.kafka=false
 # Boolean value to whether or not enable File output for the simulation
 # and the file to write the simulation logs to
 simul.output.file=true
-simul.output.file.path=/Users/raphael/Desktop/atom/atom-simul.out
+#simul.output.file.path=/Users/raphael/Desktop/atom/atom-simul.out
+simul.output.file.path=/Users/raphael/Desktop/atom/atom-replay-source.in
