Add three processors for Mean Price : event time, processing time and reference.

--- a/stream-layer/src/main/resources/streaming-jobs-configs/price-mean-processing-time.properties
+++ b/stream-layer/src/main/resources/streaming-jobs-configs/price-mean-processing-time.properties
@@ -1,9 +1,9 @@
-application.processor.name=TestPriceMeanEventTime
+application.processor.name=PriceMeanProcessingTime
 application.source.type=kafka
 application.sink.type=elasticsearch
 
 
-source.kafka.topic=atom-raw-data
+source.kafka.topic=atom-raw-data-with-delay
 source.kafka.bootstrap.servers=localhost:9092
 source.kafka.zookeeper.quorum=localhost:2181
 source.kafka.group.id=
@@ -12,4 +12,5 @@ sink.elasticsearch.bulk.flush.max.actions=1
 sink.elasticsearch.cluster.name=my-elastic-cluster
 sink.elasticsearch.host.adress=127.0.0.1
 sink.elasticsearch.host.port=9300
-sink.elasticsearch.index=test-on-prices
+sink.elasticsearch.index=price-mean
+sink.elasticsearch.discriminant=processingTime
