Add joda time in utility layer

--- a/utility-layer/pom.xml
+++ b/utility-layer/pom.xml
@@ -32,6 +32,10 @@
             <artifactId>commons-cli</artifactId>
             <version>${commons.cli.version}</version>
         </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
